--- a/.eslintrc
+++ b/.eslintrc
@@ -12,4 +12,18 @@
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0]
   }
+  {
+  "plugins": [
+    "react"
+  ]
+}
+{
+  "settings": {
+    "react": {
+      "createClass": "createClass", // Regex for Component Factory to use, default to "createClass"
+      "pragma": "React",  // Pragma to use, default to "React"
+      "version": "15.0" // React version, default to the latest React stable release
+    }
+  }
+}
 }
