--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack.js",
-    "test": "mocha --compilers js:babel/register"
+    "test": "mocha --compilers js:babel/register",
+    "lint": "eslint lib/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/turingschool-examples/react-starter-kit.git"
+    "url": "git+https://github.com/turingschool-examples/react-starter-kit.git"
   },
   "author": "Steve Kinney",
   "license": "MIT",
@@ -34,7 +35,7 @@
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.3",
     "mocha-loader": "^0.7.1",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
@@ -42,7 +43,14 @@
     "react-dom": "^15.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
