--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack.js",
+    "build": "webpack",
     "test": "mocha --compilers js:babel/register",
     "lint": "eslint lib/*.js"
   },
@@ -23,6 +23,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.4",
+    "babel-install": "2.1.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
+    "jquery": "^3.1.1",
     "mocha": "^2.5.3",
     "mocha-loader": "^0.7.1",
     "node-libs-browser": "^1.0.0",
@@ -52,5 +54,6 @@
   "dependencies": {
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
-  }
+  },
+  "keywords": []
 }
